# Midas

./: README.md  __init__.py  evaluator.py  factory.py  index.html  kb.py  monitor.py  pyproject.toml  test_integration.py
demo_artifacts/: DEMO_REPORT.md  FINAL_REPORT.md  OPENAI_DEMO_REPORT.md
demo_artifacts/midas-kb-online/knowledge/learnings/online/: 2026-04-01-mean-reversion-signals-from-vwap-deviati.md
demo_artifacts/midas-kb-online/proposer/prompts/: refine.md
demo_artifacts/midas-kb-online/reports/daily/: 2025-01-31.md
demo_artifacts/midas-kb-online/reports/diagnoses/: 2026-04-01-0051-mean-reversion-signals-from-vw.md  2026-04-01-0052-mean-reversion-signals-from-vw.md
demo_artifacts/midas-kb-online/skills/: factor-patterns.md
demo_artifacts/midas-kb/knowledge/: thresholds.json
demo_artifacts/midas-kb/knowledge/learnings/offline/: 2026-04-01-mean-reversion-signals-from-vwap-deviati.md
demo_artifacts/midas-kb/proposer/prompts/: generate.md  plan.md
demo_artifacts/midas-kb/skills/: midas-dsl.md
midas/: __init__.py  __main__.py  demo.py  factory.py  kb.py  llm.py  loops.py  models.py  monitor.py  promoter.py  proposer.py
