[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "midas-alpha"
version = "0.1.0"
description = "Dual-loop framework for alpha feature discovery and online monitoring."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40.0",
  "numpy>=1.26.0",
  "openai>=1.40.0",
  "pandas>=1.5.0",
  "PyYAML>=6.0.0",
  "scikit-learn>=1.5.0",
]

[project.scripts]
midas = "midas.factory:_cli"

[tool.setuptools]
packages = ["midas"]
